MET-6423: Fix unit test.